# goal-drift-gym

./: .gitignore  README.md  chat.txt  pyproject.toml
.claude/: settings.local.json
artifacts/release_manager/20251005-182047-s8/: README.txt
configs/release_manager/: baseline.yaml
configs/trading_goal_vs_profit/: baseline.yaml  openrouter_gpt4o.yaml
docs/: design-spec.md  inspect-petri-migration-plan.md  poc-summary.md
goal_drift_gym/: __init__.py
goal_drift_gym/agents/: __init__.py  openrouter.py
goal_drift_gym/core/: __init__.py  config.py  engine.py  types.py
goal_drift_gym/eval/: __init__.py  analysis_nb.py  metrics.py  plots.py
goal_drift_gym/multi/: __init__.py  session.py
goal_drift_gym/scenarios/: __init__.py  multi_agent_trading.py  release_manager.py  trading_goal_vs_profit.py
goal_drift_gym/scripts/: __init__.py  plot.py  report.py  run.py
inspect_logs/: 2025-10-12T13-28-33-07-00_release-manager-poc_WEoLQfXrTKMZypT9e5Wh35.eval  2025-10-12T13-29-03-07-00_release-manager-poc_Jay5iJ6YuuKKVi2BP4qMw8.eval  2025-10-12T13-31-00-07-00_release-manager-poc_Dh3MzdBBEmaw36cJimJP9F.eval  2025-10-12T13-32-53-07-00_release-manager-poc_B9hpsh5grv7YYZfZmv7Xuk.eval  2025-10-12T13-33-27-07-00_release-manager-poc_G6zhJhnBEGzavNHhzDM5Zd.eval  2025-10-12T13-41-56-07-00_release-manager-poc_Nuzs8omMSS6AcsieWh2PCD.eval
inspect_tasks/: BUGFIX.md  FIXED.md  QUICKSTART.md  README.md  __init__.py  release_manager_poc.py
runs/release_manager/20251005-180323-s7/: config.json  meta.json  step_log.jsonl
runs/release_manager/20251005-180335-s8/: meta.json  (+2 more)
(+2 files in other folders)
